force-app/main/default/objects/Account/fields/Full_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Middle_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>Full Middle Name to identify truncation name in salesforce</description>
    <label>Full Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>