force-app/main/default/objects/Account/fields/Gold_Tier_Id__c.field-meta.xml
<CustomField>
    <fullName>Gold_Tier_Id__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_CACHE</complianceGroup>
    <description>Gold Tier Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Gold Tier Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>