force-app/main/default/objects/Account/fields/Hardship__c.field-meta.xml
<CustomField>
    <fullName>Hardship__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This Flag indicates if Customer is undergoing Hardship or not.</description>
    <inlineHelpText>This flag indicates that the customer has one/more of their account/s (Existing ANZ or ANZ Plus account/s) currently being managed by the hardship team.</inlineHelpText>
    <label>Hardship</label>
    <type>Checkbox</type>
</CustomField>