force-app/main/default/objects/Account/fields/Has_Customer_Provided_TFN__c.field-meta.xml
<CustomField>
    <fullName>Has_Customer_Provided_TFN__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>To identify whether the customer has provided a TFN number or not.</description>
    <label>Has Customer Provided TFN</label>
    <type>Checkbox</type>
</CustomField>