force-app/main/default/objects/Account/fields/Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>Identification_Type__c</fullName>
    <complianceGroup>Integrity - Accurate</complianceGroup>
    <description>The type of identification document the customer has used during KYC. List of values (eg: &quot;ABN&quot;, &quot;Drivers License&quot; etc.)</description>
    <inlineHelpText>Reference data value for Identification type</inlineHelpText>
    <label>Identification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centrelink Card</fullName>
                <label>Centrelink Card Reference Number</label>
            </value>
            <value>
                <fullName>Drivers License</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
                <label>Passport Number</label>
            </value>
            <value>
                <fullName>Employee Number</fullName>
                <label>ANZ Staff Employee number</label>
            </value>
            <value>
                <fullName>Veterans Card</fullName>
                <label>Veteran Affairs Card Reference Number </label>
            </value>
            <value>
                <fullName>CRN</fullName>
                <label>Customer Registration Number</label>
            </value>
            <value>
                <fullName>ABN</fullName>
                <label>Australian Business Number</label>
            </value>
            <value>
                <fullName>ACN</fullName>
                <label>Australian Company Number</label>
            </value>
            <value>
                <fullName>ARBN</fullName>
                <label>Australian Registered Business Number</label>
            </value>
            <value>
                <fullName>One Customer ID</fullName>
                <label>One Customer Identifier</label>
            </value>
            <value>
                <fullName>ANZ Person Identifier</fullName>
                <label>An identifier for Person which is unique and immutable. ForgeRock is the Master of this attribute.</label>
            </value>
            <value>
                <fullName>Australian Driver&apos;s Licence</fullName>
            </value>
            <value>
                <fullName>Foreign Driver&apos;s Licence</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
                <label>Government Identifier</label>
            </value>
            <value>
                <fullName>Personal Tax Number</fullName>
                <label>Personal Tax Number (Foreign)</label>
            </value>
            <value>
                <fullName>National ID</fullName>
            </value>
            <value>
                <fullName>BVD ID</fullName>
            </value>
            <value>
                <fullName>CBIG ID</fullName>
            </value>
            <value>
                <fullName>OASIS ID</fullName>
            </value>
            <value>
                <fullName>PEOPLESOFT ID</fullName>
            </value>
            <value>
                <fullName>UCI</fullName>
            </value>
            <value>
                <fullName>Vision+ Merchant ID</fullName>
            </value>
            <value>
                <fullName>CCBIS ID</fullName>
            </value>
            <value>
                <fullName>Vision+ ID</fullName>
            </value>
            <value>
                <fullName>Pacer ID</fullName>
            </value>
            <value>
                <fullName>CACHE Account ID</fullName>
            </value>
            <value>
                <fullName>Other/Unknown Identifier</fullName>
            </value>
            <value>
                <fullName>CAP NZ ID</fullName>
            </value>
            <value>
                <fullName>ESANDA ID</fullName>
            </value>
            <value>
                <fullName>GOLDTIER ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>