force-app/main/default/objects/Account/fields/Is_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Is_Prospect__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Flag to indicate Account is prospect or not.</description>
    <formula>(RecordType.DeveloperName = &apos;Business_Account&apos; || IsPersonAccount) &amp;&amp;
ISPICKVAL(FinServ__Status__c, &apos;Prospect&apos;) &amp;&amp;
Source_System_Name__c = $Label.CCRM_Source_System_Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Prospect</label>
    <type>Checkbox</type>
</CustomField>