force-app/main/default/objects/Account/fields/IsSkeleton__c.field-meta.xml
<CustomField>
    <fullName>IsSkeleton__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Record contains basic set of information</description>
    <label>Is Skeleton</label>
    <type>Checkbox</type>
</CustomField>