force-app/main/default/objects/Account/fields/IsSnapshotError__c.field-meta.xml
<CustomField>
    <fullName>IsSnapshotError__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Party snapshot in error</description>
    <label>Is Snapshot Error</label>
    <type>Checkbox</type>
</CustomField>