force-app/main/default/objects/Account/fields/IsSnapshotInProgress__c.field-meta.xml
<CustomField>
    <fullName>IsSnapshotInProgress__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Party snapshot in progress</description>
    <label>Is Snapshot In Progress</label>
    <type>Checkbox</type>
</CustomField>