force-app/main/default/objects/Account/fields/IsTruncated__c.field-meta.xml
<CustomField>
    <fullName>IsTruncated__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Display Full Names to identify truncation name in salesforce if isTruncated is true</description>
    <label>IsTruncated</label>
    <type>Checkbox</type>
</CustomField>