force-app/main/default/objects/Account/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Jurisdiction</description>
    <label>Jurisdiction</label>
    <length>30</length>
    <type>Text</type>
</CustomField>