force-app/main/default/objects/Account/fields/KYC_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Confirmation_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Date when Customer&apos;s KYC Confirmed.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>KYC Confirmation Date</label>
    <type>Date</type>
</CustomField>