force-app/main/default/objects/Account/fields/KYC_Verification_Level__c.field-meta.xml
<CustomField>
    <fullName>KYC_Verification_Level__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>Know Your Customer - reflects the level of verification and determines whether a customer can access a product or service.</description>
    <label>KYC Verification Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Married/Defacto</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>NO VERIFICATION LEVEL ISSUED</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>Escalate</label>
            </value>
            <value>
                <fullName>NM</fullName>
                <label>Non Verified Migrated</label>
            </value>
            <value>
                <fullName>NV</fullName>
                <label>Non Verified</label>
            </value>
            <value>
                <fullName>RR</fullName>
                <label>Re-verification Required</label>
            </value>
            <value>
                <fullName>VE</fullName>
                <label>Verified</label>
            </value>
            <value>
                <fullName>VM</fullName>
                <label>Verified Migrated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>