force-app/main/default/objects/Account/fields/KYCVerificationDate__c.field-meta.xml
<CustomField>
    <fullName>KYCVerificationDate__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Date when Customer&apos;s KYC Verified.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>The date the customer was last verified for KYC</inlineHelpText>
    <label>KYC Verification Date</label>
    <type>Date</type>
</CustomField>