force-app/main/default/objects/Account/fields/Last_Maint_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Maint_Date__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_CACHE</complianceGroup>
    <description>Date (DDMMYYYY) customer data last maintained.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Maintained Date</label>
    <type>Date</type>
</CustomField>