force-app/main/default/objects/Account/fields/Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_By__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Field to store the user who last updated the customer .
This field is to be update by Integration with OCV</description>
    <label>Last Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>