force-app/main/default/objects/Account/fields/Legal_Entitlements__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entitlements__c</fullName>
    <complianceGroup>Integrity - Trusted</complianceGroup>
    <label>Legal Entitlements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PCH</fullName>
            </value>
            <value>
                <fullName>PCC</fullName>
            </value>
            <value>
                <fullName>PAE</fullName>
            </value>
            <value>
                <fullName>ITO</fullName>
            </value>
            <value>
                <fullName>PRI</fullName>
            </value>
            <value>
                <fullName>CLG</fullName>
            </value>
            <value>
                <fullName>ITF</fullName>
            </value>
            <value>
                <fullName>AD3</fullName>
            </value>
            <value>
                <fullName>AD2</fullName>
            </value>
            <value>
                <fullName>AD1</fullName>
            </value>
            <value>
                <fullName>BCC</fullName>
            </value>
            <value>
                <fullName>BCG</fullName>
            </value>
            <value>
                <fullName>UNO</fullName>
            </value>
            <value>
                <fullName>BCH</fullName>
            </value>
            <value>
                <fullName>SOL</fullName>
            </value>
            <value>
                <fullName>TSO</fullName>
            </value>
            <value>
                <fullName>TSM</fullName>
            </value>
            <value>
                <fullName>TSF</fullName>
            </value>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>ROS</fullName>
            </value>
            <value>
                <fullName>RCV</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>PTO</fullName>
            </value>
            <value>
                <fullName>PTF</fullName>
            </value>
            <value>
                <fullName>PTC</fullName>
            </value>
            <value>
                <fullName>LIQ</fullName>
            </value>
            <value>
                <fullName>LOA</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>COF</fullName>
            </value>
            <value>
                <fullName>GTR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>