force-app/main/default/objects/Account/fields/Mailing_Name__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Organisation&apos;s OR Person&apos;s mailing name</description>
    <inlineHelpText>Organisation&apos;s OR Person&apos;s mailing name</inlineHelpText>
    <label>Mailing Name</label>
    <type>TextArea</type>
</CustomField>