force-app/main/default/objects/Account/fields/Mailing_Title_2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Title_2__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Customer Mailing Title 2 data from CAP.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Title 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>