force-app/main/default/objects/Account/fields/Migration_Status__c.field-meta.xml
<CustomField>
    <fullName>Migration_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>Migration indicator for the customer</description>
    <inlineHelpText>This status indicates if the customer has been moved internally from ANZ to ANZ Plus.</inlineHelpText>
    <label>Move Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Migration_Status</valueSetName>
    </valueSet>
</CustomField>