force-app/main/default/objects/Account/fields/Migration_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Migration_Status_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>Date when migration status was updated</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the customer was moved internally from ANZ to ANZ Plus.</inlineHelpText>
    <label>Move Date</label>
    <type>Date</type>
</CustomField>