force-app/main/default/objects/Account/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Created this field to utilise existing Mobile hyperlink field to be used as text in Customer highlighted panel.</description>
    <formula>PersonMobilePhone</formula>
    <label>Mobile (ANZ Plus)</label>
    <type>Text</type>
</CustomField>