force-app/main/default/objects/Account/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Occupation of the customer</description>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Employment_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>99920</fullName>
                <label>Child/baby</label>
            </value>
            <value>
                <fullName>99900</fullName>
                <label>Pensioner</label>
            </value>
            <value>
                <fullName>99950</fullName>
                <label>House wife/husband</label>
            </value>
            <value>
                <fullName>99980</fullName>
                <label>Self-Employed</label>
            </value>
            <value>
                <fullName>111111</fullName>
                <label>Chief Executive or Managing Director</label>
            </value>
            <value>
                <fullName>111200</fullName>
                <label>General Managers</label>
            </value>
            <value>
                <fullName>111212</fullName>
                <label>Defence Force Senior Officer</label>
            </value>
            <value>
                <fullName>111311</fullName>
                <label>Local Government Legislator</label>
            </value>
            <value>
                <fullName>111312</fullName>
                <label>Member of Parliament</label>
            </value>
            <value>
                <fullName>111399</fullName>
                <label>Legislators nec</label>
            </value>
            <value>
                <fullName>111900</fullName>
                <label>Ambassador and Consulate General</label>
            </value>
            <value>
                <fullName>121000</fullName>
                <label>Farmers and Farm Managers</label>
            </value>
            <value>
                <fullName>131000</fullName>
                <label>Advertising, Public Relations and Sales Managers</label>
            </value>
            <value>
                <fullName>132000</fullName>
                <label>Business Administration Managers</label>
            </value>
            <value>
                <fullName>133000</fullName>
                <label>Construction, Distribution and Production Managers</label>
            </value>
            <value>
                <fullName>134000</fullName>
                <label>Education, Health and Welfare Services Managers</label>
            </value>
            <value>
                <fullName>139111</fullName>
                <label>Commissioned Defence Force Officer</label>
            </value>
            <value>
                <fullName>139112</fullName>
                <label>Commissioned Fire Officer</label>
            </value>
            <value>
                <fullName>139113</fullName>
                <label>Commissioned Police Officer</label>
            </value>
            <value>
                <fullName>139211</fullName>
                <label>Senior Non-commissioned Defence Force Member</label>
            </value>
            <value>
                <fullName>139800</fullName>
                <label>Gov&apos;t/ Public Service - Management</label>
            </value>
            <value>
                <fullName>139900</fullName>
                <label>Other Specialist Managers</label>
            </value>
            <value>
                <fullName>140000</fullName>
                <label>Other Hospitality, Retail and Service Managers</label>
            </value>
            <value>
                <fullName>142112</fullName>
                <label>Antique Dealer</label>
            </value>
            <value>
                <fullName>142113</fullName>
                <label>Betting Agency Manager</label>
            </value>
            <value>
                <fullName>142115</fullName>
                <label>Post Office Manager</label>
            </value>
            <value>
                <fullName>142116</fullName>
                <label>Travel Agency Manager</label>
            </value>
            <value>
                <fullName>210000</fullName>
                <label>Arts and Media Professionals</label>
            </value>
            <value>
                <fullName>212400</fullName>
                <label>Journalists and Other Writers</label>
            </value>
            <value>
                <fullName>221100</fullName>
                <label>Accountants</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>