force-app/main/default/objects/Account/fields/OCV_Event_Version__c.field-meta.xml
<CustomField>
    <fullName>OCV_Event_Version__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>Refers to the event version number of the latest information sent from OCV to update Salesforce</description>
    <label>OCV Event Version</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>