force-app/main/default/objects/Account/fields/OCV_ID__c.field-meta.xml
<CustomField>
    <fullName>OCV_ID__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>Customer Master will employ the use of database sequence while assigning a &apos;One Customer ID&apos; when a new party is created in the Customer Master.</description>
    <inlineHelpText>One Customer View ID</inlineHelpText>
    <label>OCV ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>