force-app/main/default/objects/Account/fields/OCV_ID_CAP_ID__c.field-meta.xml
<CustomField>
    <fullName>OCV_ID_CAP_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Created this field to utilise existing OCV ID and CAP ID field to resolve limitation of Customer highlighted panel as part of CC-8681.</description>
    <formula>OCV_ID__c + &apos; / &apos; +  Source_System_ID__c</formula>
    <label>OCV ID / CAP ID</label>
    <type>Text</type>
</CustomField>