force-app/main/default/objects/Account/fields/OCV_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>OCV_Profile_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Customer Profile ID from OCV</description>
    <externalId>true</externalId>
    <label>OCV Profile ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>