force-app/main/default/objects/Account/fields/Other_Email__c.field-meta.xml
<CustomField>
    <fullName>Other_Email__c</fullName>
    <complianceGroup>Source - OCV;Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>Email of the customer owning the account</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>