force-app/main/default/objects/Account/fields/PI_Score__c.field-meta.xml
<CustomField>
    <fullName>PI_Score__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <description>Customer&apos;s Performance Indicator Score</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Performance Indicator Score</label>
    <length>2</length>
    <type>Text</type>
</CustomField>