force-app/main/default/objects/Account/fields/PPID__c.field-meta.xml
<CustomField>
    <fullName>PPID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Twilio</complianceGroup>
    <description>A unique ID that will be used to fetch chat related topics</description>
    <label>PPID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>