force-app/main/default/objects/Account/fields/Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone__c</fullName>
    <complianceGroup>Integrity - Trusted</complianceGroup>
    <description>Customer Preferred Phone</description>
    <label>Preferred Phone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Secondary Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>