force-app/main/default/objects/Account/fields/Primary_Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Residential_Address__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <formula>HYPERLINK(&quot;https://www.google.com/maps/search/?api=1&amp;query=&quot;&amp;PersonOtherStreet&amp;&quot;+&quot;&amp;PersonOtherCity&amp;&quot;+&quot;&amp;PersonOtherState&amp;&quot;+&quot;&amp;PersonOtherPostalCode&amp;&quot;+&quot;&amp;PersonOtherCountry,PersonOtherStreet &amp; BR()
&amp;PersonOtherCity&amp;&quot; &quot;&amp;PersonOtherState&amp;&quot; &quot;&amp;PersonOtherPostalCode&amp;BR()&amp;PersonOtherCountry,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Residential Address</label>
    <type>Text</type>
</CustomField>