force-app/main/default/objects/Account/fields/Principal_Place_of_Business_Formula__c.field-meta.xml
<CustomField>
    <fullName>Principal_Place_of_Business_Formula__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>It is used in search layout.</description>
    <formula>ShippingStreet + BR() +
ShippingCity + &quot; &quot; +
ShippingState + &quot; &quot; +
ShippingPostalCode + BR() +
ShippingCountry</formula>
    <label>Principal Place of Business</label>
    <type>Text</type>
</CustomField>