force-app/main/default/objects/Account/fields/Secondary_Home_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Home_Telephone__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information</complianceGroup>
    <description>Secondary Home Telephone</description>
    <inlineHelpText>Secondary Home Telephone</inlineHelpText>
    <label>Secondary Home Telephone</label>
    <type>Phone</type>
</CustomField>