force-app/main/default/objects/Account/fields/Security_Code_Requested__c.field-meta.xml
<CustomField>
    <fullName>Security_Code_Requested__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Stores timestamp when code is requested</description>
    <label>Security Code Requested</label>
    <type>DateTime</type>
</CustomField>