force-app/main/default/objects/Account/fields/Security_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Security_Indicator__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_CACHE</complianceGroup>
    <description>Related to credit rating and to be sourced from Cache</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Security Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>