force-app/main/default/objects/Account/fields/Self_Certified_Tax_Date__c.field-meta.xml
<CustomField>
    <fullName>Self_Certified_Tax_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - OCV</complianceGroup>
    <description>Date the self certification was made.</description>
    <inlineHelpText>Date the self certification was made.</inlineHelpText>
    <label>Tax Date</label>
    <type>Date</type>
</CustomField>