force-app/main/default/objects/Account/fields/Self_Certified_Tax_Residency__c.field-meta.xml
<CustomField>
    <fullName>Self_Certified_Tax_Residency__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Flag to capture self-certified Tax Residency</description>
    <label>Self Certified Tax Residency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>