force-app/main/default/objects/Account/fields/Self_Employed__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - OCV</complianceGroup>
    <description>A flag to indicate if the customer is self employed</description>
    <label>Self-Employed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>