force-app/main/default/objects/Account/fields/Source_System_Icon__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Icon__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CACHE</complianceGroup>
    <description>Determines the source system</description>
    <formula>IF(Source_System_Name__c = &apos;CAP-CIS&apos;, IMAGE(&quot;/resource/1751271803000/CAP_Image&quot;, &quot;CAP-CIS&quot;, 30, 60),
IF(Source_System_Name__c = &apos;CACHE&apos;, IMAGE(&quot;/resource/1751271826000/CACHE_Image&quot;, &quot;CACHE&quot;, 30 ,60),
&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source System</label>
    <type>Text</type>
</CustomField>