force-app/main/default/objects/Account/fields/Source_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_System_ID__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Source System Id of Party received from OCV</description>
    <label>Source System ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>